# pwned-passwords-downloader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: test_etag_sync.sh
src/: args.rs  combined_writer.rs  download.rs  etag.rs  hash_writer.rs  individual_writer.rs  main.rs  stats.rs  writer.rs
