[package]
name = "pwned-passwords-downloader-rs"
description = "A tool to download all Pwned Passwords hashes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["brotli", "gzip"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
