[package]
name = "pwned-passwords-downloader-rs"
authors = ["Federico G. Schwindt <fgsch@lodoss.net>"]
description = "A tool to download password hashes from Have I Been Pwned"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fgsch/pwned-passwords-downloader-rs"
homepage = "https://github.com/fgsch/pwned-passwords-downloader-rs"
readme = "README.md"
keywords = ["security", "passwords", "hibp", "downloader"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["brotli", "gzip", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.20"

[dev-dependencies]
http = "1.4.0"
mockito = "1.7.0"
tempfile = "3.23.0"
tokio-test = "0.4.4"

[lints.clippy]
uninlined_format_args = "deny"
