[package]
name = "pwned-passwords-downloader-rs"
authors = ["Federico G. Schwindt <fgsch@lodoss.net>"]
description = "A tool to download password hashes from Have I Been Pwned"
version = "0.9.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fgsch/pwned-passwords-downloader-rs"
homepage = "https://github.com/fgsch/pwned-passwords-downloader-rs"
readme = "README.md"
keywords = ["security", "passwords", "hibp", "downloader"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
indicatif = "0.18.4"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = [
  "brotli",
  "gzip",
  "query",
  "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.23"

[dev-dependencies]
http = "1.4.0"
mockito = "1.7.2"
tempfile = "3.27.0"
tokio-test = "0.4.5"

[lints.clippy]
uninlined_format_args = "deny"
